H_mf_nou is still incomplete, but currently debugging why H_mf_D is giving key Error

--- a/batteryAgent.ipynb
+++ b/batteryAgent.ipynb
@@ -127,6 +127,16 @@
     "u2 = 0\n",
     "# data\n",
     "q_w_B1_dot_0 = 0\n",
+    "phi_1_B1_dot_0 = 0\n",
+    "i_1_B1_0 = 0\n",
+    "L_1_B1 = 1\n",
+    "K_R_B1 = 0\n",
+    "K_EM_B1 = 0 \n",
+    "K_M_B1 =0\n",
+    "K_E_B1= 0\n",
+    "L_a_B1 = 0\n",
+    "D_B1 =0\n",
+    "gamma_B1 = 0\n",
     "\n",
     "## building 2\n",
     "# states\n",
@@ -136,15 +146,18 @@
     "phil1b2 = 0\n",
     "# controls\n",
     "u1b2 = 0\n",
+    "#parameters\n",
+    "L_1_B2 = 0\n",
     "# data\n",
     "q_a_B2_dot_0 = 0\n",
+    "phi_1_B2_dot_0 = 0\n",
     "\n",
     "## utility\n",
     "# states\n",
     "# controls\n",
     "# no controls for utility because we don't control it\n",
     "# data\n",
-    "q_u_dot_0=0\n",
+    "q_u_dot_0 = 0\n",
     "\n",
     "# mean field vectors\n",
     "q_1 = q_1_0\n",
@@ -157,7 +170,8 @@
     "# parameters\n",
     "R_a = 0\n",
     "L_a = 0\n",
-    "K_em = 9\n",
+    "K_em_B1 = 0\n",
+    "R_E_1 = 0\n",
     "\n",
     "# for extracting values\n",
     "q_1  = q_mf[0]\n",
@@ -176,7 +190,11 @@
     "u2 = u_mf[2]\n",
     "u1b2 = u_mf[3]\n",
     "\n",
-    "u_s = np.array([u_B])\n",
+    "#data\n",
+    "q_f_B1_dot_0=0\n",
+    "\n",
+    "\n",
+    "u_s = np.array([u_B]) \n",
     "qp_vec = np.concatenate([q_s, p_l, p_mf])"
    ]
   },
@@ -189,7 +207,9 @@
    "outputs": [],
    "source": [
     "bb = Blackboard()\n",
-    "bat = batteryAgent(bb, state_indices=[1,2], control_indices=[1], q_1_0=q_1_0, q_B_0=q_B_0, v_c_u_0=v_c_u_0, v_c_1_0=v_c_1_0, c_1=c_1, R_0=R_0, R_1=R_1, v_a=v_a, Q_0=Q_0, beta=beta, v_N=v_N, q_u_dot_0=q_u_dot_0, q_a_B2_dot_0 = q_a_B2_dot_0, q_w_B1_dot_0 = q_w_B1_dot_0, L_a =L_a,  R_a =R_a, K_em=K_em)"
+    "bat = batteryAgent(bb, state_indices=[1,2], control_indices=[1], q_1_0=q_1_0, q_B_0=q_B_0, v_c_u_0=v_c_u_0, v_c_1_0=v_c_1_0, c_1=c_1, R_0=R_0, R_1=R_1, v_a=v_a, Q_0=Q_0, beta=beta, v_N=v_N, q_u_dot_0=q_u_dot_0, q_a_B2_dot_0 = q_a_B2_dot_0, q_w_B1_dot_0 = q_w_B1_dot_0, L_a =L_a,  \\\n",
+    "                   R_a =R_a, K_em_B1=K_em_B1, q_f_B1_dot_0=q_f_B1_dot_0, phi_1_B1_dot_0=phi_1_B1_dot_0, phi_1_B2_dot_0=phi_1_B2_dot_0, i_1_B1_0=i_1_B1_0, L_1_B1=L_1_B1, L_1_B2=L_1_B2, K_R_B1=K_R_B1, K_EM_B1=K_EM_B1, K_M_B1=K_M_B1, K_E_B1=K_E_B1, L_a_B1=L_a_B1, D_B1 = D_B1, \\\n",
+    "                   gamma_B1=gamma_B1, R_E_1 = R_E_1)"
    ]
   },
   {
@@ -737,7 +757,7 @@
     {
      "data": {
       "text/plain": [
-       "<batteryAgent.batteryAgent instance at 0x104c36560>"
+       "<batteryAgent.batteryAgent instance at 0x104c551b8>"
       ]
      },
      "execution_count": 29,
@@ -1081,25 +1101,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# print stop"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'stop' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-48-86c4545cc7bb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mstop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'stop' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      " incomplete\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print stop"
+    "bat.H_mf_nou(q_mf, p_mf, u_mf)"
    ]
   },
   {
@@ -1110,98 +1149,49 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/batteryAgent.py(355)H_mf_nou()\n",
-      "-> q_1_mf = q_mf[0]\n",
-      "(Pdb) q_mf\n",
-      "array([1, 1, 0, 0, 0, 0, 0, 0, 0, 0])\n",
-      "(Pdb) l\n",
-      "350  \t\n",
-      "351  \t    # Mean Field methods\n",
-      "352  \t    def H_mf_nou(self, q_mf, p_mf, u_mf):\n",
-      "353  \t        import pdb; pdb.set_trace()\n",
-      "354  \t        # should return a scalar\n",
-      "355  ->\t        q_1_mf = q_mf[0]\n",
-      "356  \t        q_B_mf = q_mf[1]\n",
-      "357  \t\n",
-      "358  \t        p_1_mf = p_mf[0]\n",
-      "359  \t        p_B_mf = p_mf[1]\n",
-      "360  \t\n",
-      "(Pdb) n\n",
-      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/batteryAgent.py(356)H_mf_nou()\n",
-      "-> q_B_mf = q_mf[1]\n",
-      "(Pdb) n\n",
-      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/batteryAgent.py(358)H_mf_nou()\n",
-      "-> p_1_mf = p_mf[0]\n",
-      "(Pdb) n\n",
-      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/batteryAgent.py(359)H_mf_nou()\n",
-      "-> p_B_mf = p_mf[1]\n",
-      "(Pdb) n\n",
-      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/batteryAgent.py(361)H_mf_nou()\n",
-      "-> def q_B_mf_dot(self, p_mf):\n",
-      "(Pdb) num\n",
-      "*** NameError: name 'num' is not defined\n",
-      "(Pdb) n\n",
-      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/batteryAgent.py(375)H_mf_nou()\n",
-      "-> def q_1_mf_dot(self, p_mf):\n",
-      "(Pdb) n\n",
-      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/batteryAgent.py(386)H_mf_nou()\n",
-      "-> return\n",
-      "(Pdb) l\n",
-      "381  \t            q_B_mf_dot = self.q_B_mf_dot(p_mf)\n",
-      "382  \t            q_1_mf_dot = (p_1_mf/(self.R_1*delta)) - q_B_mf_dot\n",
-      "383  \t\n",
-      "384  \t            return q_1_mf_dot\n",
-      "385  \t \n",
-      "386  ->\t        return \n",
-      "387  \t\n",
-      "388  \t    def L_mf(self, q_mf, q_mf_dot, u_mf):\n",
-      "389  \t        '''\n",
-      "390  \t        This method computes the mean field lagrangian.  Note that since u_mf contains the local u, it is not necessary to be an input, we could use u_s, but to be consistent with the mean field methods, we will use u_mf.\n",
-      "391  \t        '''\n",
-      "(Pdb) exit()\n"
-     ]
-    },
-    {
-     "ename": "BdbQuit",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mBdbQuit\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-49-72c5e32939bc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mH_mf_nou\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Users/jordan/Documents/Atigeo/cdi/control_law_propagator/batteryAgent.py\u001b[0m in \u001b[0;36mH_mf_nou\u001b[0;34m(self, q_mf, p_mf, u_mf)\u001b[0m\n\u001b[1;32m    384\u001b[0m         \u001b[0;31m# TODO: replace as a function of self.K and self.T\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    385\u001b[0m         \u001b[0mdelta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 386\u001b[0;31m         \u001b[0mp_1_mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp_mf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    387\u001b[0m         \u001b[0mp_B_mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp_mf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    388\u001b[0m         \u001b[0mq_B_mf_dot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_B_mf_dot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp_mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/jordan/Documents/Atigeo/cdi/control_law_propagator/batteryAgent.py\u001b[0m in \u001b[0;36mH_mf_nou\u001b[0;34m(self, q_mf, p_mf, u_mf)\u001b[0m\n\u001b[1;32m    384\u001b[0m         \u001b[0;31m# TODO: replace as a function of self.K and self.T\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    385\u001b[0m         \u001b[0mdelta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 386\u001b[0;31m         \u001b[0mp_1_mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp_mf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    387\u001b[0m         \u001b[0mp_B_mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mp_mf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    388\u001b[0m         \u001b[0mq_B_mf_dot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mq_B_mf_dot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp_mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/bdb.pyc\u001b[0m in \u001b[0;36mtrace_dispatch\u001b[0;34m(self, frame, event, arg)\u001b[0m\n\u001b[1;32m     47\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;31m# None\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'line'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdispatch_line\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'call'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdispatch_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/bdb.pyc\u001b[0m in \u001b[0;36mdispatch_line\u001b[0;34m(self, frame)\u001b[0m\n\u001b[1;32m     66\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstop_here\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbreak_here\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muser_line\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 68\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquitting\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mraise\u001b[0m \u001b[0mBdbQuit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     69\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrace_dispatch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     70\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mBdbQuit\u001b[0m: "
-     ]
+     "data": {
+      "text/plain": [
+       "array([1])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    "bat.H_mf_nou(q_mf, p_mf, u_mf)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
    "source": [
     "bat.H_mf_u(q_mf, p_mf, u_mf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/batteryAgent.py(462)L_mf()\n",
+      "-> -(v_N/beta**2)*(beta*q_B-beta*q_B_0+(Q_0*beta-Q_0)*np.log((Q_0-Q_0*beta+beta*q_B)/(Q_0-Q_0*beta+beta*q_B_0)))\n",
+      "(Pdb) c\n"
+     ]
+    },
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "integer division or modulo by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-50-eedb982767f1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mp_mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mL_mf_q_dot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mbat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mL_mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Users/jordan/Documents/Atigeo/cdi/control_law_propagator/batteryAgent.pyc\u001b[0m in \u001b[0;36mL_mf\u001b[0;34m(self, q_mf, q_mf_dot, p_mf, u_mf)\u001b[0m\n\u001b[1;32m    460\u001b[0m             \u001b[0;34m+\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mR_0\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mdelta\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mq_B_dot\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    461\u001b[0m             \u001b[0;34m+\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mR_1\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mdelta\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_B_dot\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mq_1_dot\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 462\u001b[0;31m              \u001b[0;34m-\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv_N\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mbeta\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbeta\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mq_B\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mbeta\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mq_B_0\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mQ_0\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mbeta\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mQ_0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mQ_0\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mQ_0\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mbeta\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mbeta\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mq_B\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mQ_0\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mQ_0\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mbeta\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mbeta\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mq_B_0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    463\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    464\u001b[0m         \u001b[0;31m# Figure out what this is in Shen's code: Qch_B =\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: integer division or modulo by zero"
+     ]
+    }
+   ],
    "source": [
     "# state_dim=sliding_window_instance.state_dim, Gamma = sliding_window_instance.Gamma, u_0 = u_0, q_mf=q_mf, u_mf=u_mf\n",
     "# 0.0, qp_vec, state_dim=sliding_window_instance.state_dim, Gamma = sliding_window_instance.Gamma, u_0 = u_0, q_mf=q_mf, u_mf=u_mf\n",
@@ -1217,7 +1207,8 @@
     "# u_s = u_B\n",
     "p_l = bat.L_l_q_dot(q_s, q_s_dot, u_s)\n",
     "p_mf = bat.L_mf_q_dot(q_mf, q_mf_dot, u_mf)\n",
-    "\n"
+    "\n",
+    "bat.L_mf(q_mf, q_mf_dot, p_mf, u_mf)"
    ]
   },
   {
